[tool.poetry]
name = "homework5"
version = "0.1.0"
description = ""
authors = ["Barskyi <137706923+Barskyi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.0"
httpx = "^0.25.1"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
